os-cli/tmp/vue2Mob/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myyagent-web
  namespace: development
  labels:
    app: myyagent-web
spec:
  selector:
    app: myyagent-web
  ports:
  - port: 80
    targetPort: 80
    name: http
